# card_tracker_backend

./: main.py  pyproject.toml  requirements.txt
.github/workflows/: master_lasrra-card-tracker.yml
app/: main.py
app/api/dependencies/: authentication.py  lasrra_api.py
app/api/dependencies/authentication/: auth.py
app/api/dependencies/db/: db.py
app/api/requests/: api_requests.py
app/api/routers/: authentication_routes.py  card_management_routes.py  location_routes.py  routes.py  user_routes.py
app/api/routes/: location_routes.py  routes.py  users_routes.py  visitor_routes.py
app/commonLib/: lasrra_api.py
app/commonLib/models/: base_class.py
app/commonLib/repositories/: repository_class.py
app/core/errors/: error_strings.py  errors.py
app/core/settings/: config.py  utilities.py
app/core/settings/env_files/: .env  env.example
app/database/: base.py  session.py
app/databases/: session.py
app/models/: card_delivery_model.py  card_info_model.py  card_relocation_model.py  collection_centers_models.py  collection_centres.py  local_goverment_models.py  local_government.py  search_log_models.py  user_model.py  visits_models.py
app/repositories/: card_relocation_repo.py  location_repo.py  search_log_repo.py  user_repo.py  visit_repo.py
app/schemas/: card_management_schema.py  jwt.py  jwt_schema.py  location_schema.py  location_schemas.py  search_log_schemas.py  user_schema.py  visits_schema.py
