[tool.poetry]
name = "card-tracking-portal"
version = "0.1.0"
description = "Track LagId Card Api"
authors = ["AlexAdedeji <alex.adedeji@identikosolutions.com>"]
readme = "README.md"
packages = [{include = "card_tracking_portal"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.103.0"}
sqlalchemy = "^2.0.20"
psycopg2 = "^2.9.7"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
